--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -28,8 +28,8 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 		[Get started](/getting-started/installation/)
 	</Card>
 	<Card title="Server Configuration" icon="setting">
-		Configure server settings, worlds, and performance options.
-		[Configure](/getting-started/project-setup/)
+		Configure server settings, worlds, authentication and performance.
+		[Configure](/server/)
 	</Card>
 	<Card title="System Requirements" icon="document">
 		4GB RAM minimum, Java 25, UDP port 5520 access.
